# vanillapm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-06-diff-v2-db.md  2026-07-06-import-v2-db.md
docs/superpowers/specs/: 2026-07-06-diff-v2-db-design.md  2026-07-06-import-v2-db-design.md
src/: framework.rs  main.rs
src/engine/: mod.rs  sqlite.rs  sqlite_legacy.rs
