[package]
name = "vanillapm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
csv = "1.1.6"
openssl = "0.10.42"
openssl-sys = "0.9.76"
rand = "0.8.5"
rpassword = "7.0.0"
sqlite = "0.27.0"

[dev-dependencies]
tempfile = "3"
